syntax = "proto3";
package microtick.keeper;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/microtick/mtzone/x/microtick/keeper";

message commission_pool {
  
  cosmos.base.v1beta1.DecCoin pool = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "pool"
  ];
  
}
